# mirror

./: .env.example  .env.example.advanced  .gitignore  AGENTS.md  CLAUDE.md  NEXT_SESSION_HANDOFF.md  README.md  REFERENCE.md  pyproject.toml
.agents/skills/: mm-backup  mm-build  mm-consolidate  mm-consult  mm-conversations  mm-help  mm-identity  mm-journal  mm-journey  mm-journeys  mm-memories  mm-mirror  mm-mute  mm-new  mm-recall  mm-seed  mm-shadow  mm-tasks  mm-week  mm-welcome
.claude/: settings.json
.claude/hooks/: log-session-end.sh  log-user-prompt.sh  mirror-inject.sh  session-start.sh
.claude/skills/mm:backup/: SKILL.md
.claude/skills/mm:build/: skill.md
.claude/skills/mm:consolidate/: SKILL.md
.claude/skills/mm:consult/: SKILL.md
.claude/skills/mm:conversations/: SKILL.md
.claude/skills/mm:help/: SKILL.md
.claude/skills/mm:identity/: skill.md
.claude/skills/mm:journal/: SKILL.md
.claude/skills/mm:journey/: SKILL.md
.claude/skills/mm:journeys/: SKILL.md
.claude/skills/mm:memories/: SKILL.md
.claude/skills/mm:mirror/: SKILL.md
.claude/skills/mm:mute/: SKILL.md
.claude/skills/mm:new/: SKILL.md
.claude/skills/mm:recall/: SKILL.md
.claude/skills/mm:review-copy/: SKILL.md
.claude/skills/mm:seed/: SKILL.md
.claude/skills/mm:shadow/: SKILL.md
.claude/skills/mm:tasks/: SKILL.md
.claude/skills/mm:week/: SKILL.md
.claude/skills/mm:welcome/: SKILL.md
.gemini/: settings.json
.gemini/hooks/: log-assistant.sh  log-user.sh  session-end.sh  session-start.sh
.gemini/skills/: mm-backup  mm-build  mm-consolidate  mm-consult  mm-conversations  mm-help  mm-identity  mm-journal  mm-journey  mm-journeys  mm-memories  mm-mirror  mm-mute  mm-new  mm-recall  mm-seed  mm-shadow  mm-tasks  mm-week
.github/workflows/: test.yml  tests.yml
.pi/: package-lock.json  package.json  tsconfig.json
.pi/extensions/: mirror-logger.ts
docs/: api.md  architecture.md  english-domain-language-migration-plan.md  getting-started.md  index.md  mirror-mind-assessment.md  mirror-pi-assessment.md  portuguese-domain-language-inventory.md
docs/process/: development-guide.md  engineering-principles.md  troubleshooting.md  worklog.md
docs/product/: index.md  principles.md
docs/project/: briefing.md  decisions.md  runtime-interface.md
evals/: extraction.py  proportionality.py  reception.py  retrieval.py  routing.py  runner.py  types.py
scripts/: codex-mirror.sh  smoke_codex.sh  smoke_external_review_copy.sh  smoke_gemini_cli.sh
src/memory/: __init__.py  __main__.py  client.py  config.py  models.py  utils.py
templates/identity/: README.md
tests/: conftest.py  test_consolidation.py  test_reinforcement_honest.py  test_shadow_s4.py
tests/live/: test_embeddings_live.py
(+447 files in other folders)
