[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror"
version = "0.2.0"
description = "Memory and identity system for Mirror Mind"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
    "types-PyYAML",
]

[project.scripts]
memory-seed = "memory.cli.seed:main"
memory-backup = "memory.cli.backup:main"
memory-rehearse-migration = "memory.cli.migration_rehearsal:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: fast, no I/O, no network",
    "integration: real SQLite, may be slow",
    "live: requires real API keys (excluded from CI)",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/*/cli/*",
    "src/*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 40

[tool.coverage.paths]
source = ["src", "*/site-packages"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/memory/cli/seed.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".claude/",
]

[[tool.mypy.overrides]]
module = "memory.intelligence.*"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true
